--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "An admin dashboard to visualize various things.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start-dev": "nodemon index.js",
+    "build": "npm i"
   },
   "author": "Tushar Agarwal",
   "license": "ISC",
